SpecFlow + Selenium working

--- a/Excella.Vending.Web.UI/Views/Home/Index.cshtml
+++ b/Excella.Vending.Web.UI/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
 {
     <p><input id="insertCoin" type="submit" value="Insert Coin" /></p>
 }
-<div><p id="totalAmount">Balance: @ViewBag.Balance cents</p></div>
+<div><p id="totalAmount">Balance: <span id="balanceAmount">@ViewBag.Balance</span> cents</p></div>
 
