--- a/Excella.Vending.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Excella.Vending.Web.UI/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Application name", "Index", "VendingMachine", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "VendingMachine")</li>
                 </ul>
             </div>
         </div>
