--- a/Excella.Vending.Web.UI/Views/VendingMachine/Index.cshtml
+++ b/Excella.Vending.Web.UI/Views/VendingMachine/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Excella.Vending.Web.UI.Models.VendingMachineViewModel
+@{
     ViewBag.Title = "Vending Machine";
 }
 
@@ -13,6 +14,6 @@
     <p><input id="releaseChange" type="submit" value="Release Change" /></p>
 }
 
-<div><p id="totalAmount">Balance: <span id="balanceAmount">@ViewBag.Balance</span> cents</p></div>
-<div><p>Released Change: <span id="releasedChangeAmount">@ViewBag.ReleasedChange</span> cents</p></div>
+<div><p id="totalAmount">Balance: <span id="balanceAmount">@Model.Balance</span> cents</p></div>
+<div><p>Released Change: <span id="releasedChangeAmount">@Model.ReleasedChange</span> cents</p></div>
 
